--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
