--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.2",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
